2012-06-09  Sancho Lerena <slerena@artica.es>

	* include/functions_config.php,
	godmode/setup/setup.php: Fixed problem removing API password from setup.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Improved performance of
	sub tree for policies tree view.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Improved performance of tree
	view for policies.

2012-06-08  Ramon Novoa  <rnovoa@artica.es>

	* include/graphs/fgraph.php: Protect against accidental output that
	  might corrupt an image.

2012-06-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	include/functions_groups.php,
	include/functions_os.php,
	operation/tree.php: Fixed a problem with unknown agent
	counting.

2012-06-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed update of custom 
	graph items.

2012-06-08  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_config.php, godmode/setup/setup.php: Fixed that
	ACL with API access cannot be removed after once configured.

2012-06-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php: fixed the modules
	name with white spaces...again in Pandora console..
	
	* extensions/update_manager/lib/functions.ajax.php: upload lost
	changes.

2012-06-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/extensions.php
	 godmode/extensions.php: Fixed bug that make dissapear extensions 
	 without fatherId in menu.

2012-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php,
	operation/tree.php: Improved performance of tree
	view for modules, its not very good but now works...

2012-06-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/menu.php
	 godmode/menu.php: Fixed bug that make dissapear extensions without
	 fatherId in menu.
